Add Docker and delete not used files